--- a/src/app/pages/authentication/login/login.component.html
+++ b/src/app/pages/authentication/login/login.component.html
@@ -10,47 +10,24 @@
             <form [formGroup]="form" (ngSubmit)="submitForm()" novalidate>
               <div class="form-row">
                 <div class="form-group col-md-12">
-                  <input
-                    type="text"
-                    [ngClass]="{
+                  <input type="text" [ngClass]="{
                       'form-control': true,
                       'is-invalid': checkTrue('username', 'required')
-                    }"
-                    formControlName="username"
-                    id="username"
-                    name="username"
-                    placeholder="Nom d'utilsateur"
-                  />
-                  <span
-                  class="error invalid-feedback text-left"
-                  *ngIf="checkTrue('username', 'required')"
-                >
-                  -Saisir un nom d'utilisateur.
-                </span>
+                    }" formControlName="username" id="username" name="username" placeholder="Nom d'utilsateur" />
+                  <span class="error invalid-feedback text-left" *ngIf="checkTrue('username', 'required')">
+                    -Saisir un nom d'utilisateur.
+                  </span>
                 </div>
                 <div class="form-group col-md-12">
-                  <input
-                    type="password"
-                    id="password"
-                    placeholder="Mot de passe"
-                    name="password"
-                    [ngClass]="{
+                  <input type="password" id="password" placeholder="Mot de passe" name="password" [ngClass]="{
                       'form-control': true,
                       'is-invalid': checkTrue('username', 'required') || checkTrue('password', 'minlength')
-                    }"
-                    formControlName="password"
-                  />
-                  <span
-                    class="error invalid-feedback text-left"
-                    *ngIf="checkTrue('password', 'required')"
-                  >
+                    }" formControlName="password" />
+                  <span class="error invalid-feedback text-left" *ngIf="checkTrue('password', 'required')">
                     -Saisir un mot de passe.
                   </span>
-                  <span
-                    class="error invalid-feedback text-left"
-                    *ngIf="checkTrue('password', 'minlength')"
-                  >
-                  -Le mot de passe doit avoir au moins 8 caractères.
+                  <span class="error invalid-feedback text-left" *ngIf="checkTrue('password', 'minlength')">
+                    -Le mot de passe doit avoir au moins 8 caractères.
                   </span>
                 </div>
               </div>
@@ -59,10 +36,7 @@
                   <button type="submit" class="btn btn-primary m-1">
                     Connexion
                   </button>
-                  <button  
-                    class="btn m-1"
-                    [routerLink]="['/authentication/register']"
-                  >
+                  <button class="btn m-1" [routerLink]="['/authentication/register']">
                     S'inscrire
                   </button>
                 </div>
