--- a/src/app/pages/dashboard/caisses-list/caisses-list.component.html
+++ b/src/app/pages/dashboard/caisses-list/caisses-list.component.html
@@ -44,13 +44,11 @@
                 <div class="col-sm-12 col-md-3 ">
                   <div class="dt-buttons btn-group flex-wrap">
                     <button class="btn btn-secondary buttons-csv buttons-html5 mx-2 my-1" tabindex="0"
-                            (click)="downloadCSV()"
-                            aria-controls="example1" type="button">
+                      (click)="downloadCSV()" aria-controls="example1" type="button">
                       <span>Exporter(CSV)</span>
                     </button>
                     <button class="btn btn-secondary buttons-print mx-2 my-1" tabindex="0" aria-controls="example1"
-                            (click)="print()"
-                      type="button">
+                      (click)="print()" type="button">
                       <span>Imprimer</span>
                     </button>
                   </div>
