--- a/src/app/pages/dashboard/not-found/not-found.component.html
+++ b/src/app/pages/dashboard/not-found/not-found.component.html
@@ -1,1 +1,39 @@
-<p>not-found works!</p>
+<div class="content-wrapper">
+    <!-- Content Header (Page header) -->
+    <section class="content-header">
+        <div class="container-fluid">
+            <div class="row mb-2">
+                <div class="col-sm-6">
+                    <h1>Page Erreur 404</h1>
+                </div>
+                <div class="col-sm-6">
+                    <ol class="breadcrumb float-sm-right">
+                        <li class="breadcrumb-item"><a [routerLink]="['/dashboard/caisses-list']" >Acceuil</a></li>
+                        <li class="breadcrumb-item active">Page Erreur 404</li>
+                    </ol>
+                </div>
+            </div>
+        </div><!-- /.container-fluid -->
+    </section>
+
+    <!-- Main content -->
+    <section class="content">
+        <div class="error-page">
+            <h2 class="headline text-warning"> 404</h2>
+
+            <div class="error-content">
+                <h3><i class="fas fa-exclamation-triangle text-warning"></i> Oops! Page non trouvée.</h3>
+
+                <p>
+                    Impossible de trouver la page indiqué.
+                    <a [routerLink]="['/dashboard/caisses-list']">Aller ver l'acceuil</a> 
+                </p>
+
+            </div>
+            <!-- /.error-content -->
+        </div>
+        <!-- /.error-page -->
+    </section>
+    <!-- /.content -->
+</div>
+<!-- /.content-wrapper -->
