--- a/src/app/components/toast/toast.component.html
+++ b/src/app/components/toast/toast.component.html
@@ -1,8 +1,5 @@
 <div #toastElement class="toast fade show" [ngClass]="'bg-'+type" role="alert" aria-live="assertive" aria-atomic="true">
-    <div class="toast-header"><strong class="mr-auto">{{ title }}</strong><button
-        (click)="hide()"
-            data-dismiss="toast" type="button" class="ml-2 mb-1 close" aria-label="Close"><span
-                aria-hidden="true">×</span></button></div>
+    <div class="toast-header"><strong class="mr-auto">{{ title }}</strong><button (click)="hide()" data-dismiss="toast"
+            type="button" class="ml-2 mb-1 close" aria-label="Close"><span aria-hidden="true">×</span></button></div>
     <div class="toast-body" [innerHTML]="message"></div>
 </div>
-
