--- a/src/app/components/toaster/toaster.component.html
+++ b/src/app/components/toaster/toaster.component.html
@@ -1,10 +1,6 @@
 <div id="toastsContainerTopRight" class="toasts-bottom-right fixed">
-    <div *ngFor="let toast of currentToasts; index as i">
-        <app-toast
-          [type]="toast.type"
-          [title]="toast.title"
-          [message]="toast.message"
-          (disposeEvent)="dispose(i)"
-        ></app-toast>
-      </div>
+  <div *ngFor="let toast of currentToasts; index as i">
+    <app-toast [type]="toast.type" [title]="toast.title" [message]="toast.message" (disposeEvent)="dispose(i)">
+    </app-toast>
+  </div>
 </div>
